--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@
   background-color: transparent;
   /* box-shadow: 0px 3px 15px rgba(0,0,0,0.2); */
   padding: 18px 0;
-  z-index: 1000;
+  z-index: 10;
   transition: top 0.4s;
   font-size: 1.7rem;
   height: 22px;
@@ -186,13 +186,140 @@ header.scrolled ul li a {
   height: auto;
 }
 
+/* GALLERY MODAL */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 20;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.9);
+  align-items: center;
+  justify-content: center;
+}
+
+/* Show the modal with flex */
+.modal.show {
+  display: flex;
+}
+
+/* Modal Content (image) */
+.modal-content {
+  max-width: 90%;
+  max-height: 80%;
+  margin: auto;
+  display: block;
+}
+
+/* Add Animation - Zoom in the Modal */
+.modal-content {
+  animation-name: zoom;
+  animation-duration: 0.6s;
+}
+
+@keyframes zoom {
+  from {transform: scale(0)}
+  to {transform: scale(1)}
+}
+
+.close {
+  position: absolute;
+  top: 15px;
+  right: 35px;
+  color: #f1f1f1;
+  font-size: 40px;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+  color: #bbb;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+
+/* FIRST BREAKPOINT */
+/* ABOUT PAGE */
 @media (max-width: 2000px) {
   .about-content img {
     width: 400px;
-    box-shadow: 3px 3px 8px var(--accent-color);
   }
 
   .about-content p {
     font-size: 1.2em;
   }
 }
+
+/* SECOND BREAKPOINT */
+/* ABOUT PAGE */
+@media (max-width: 1550px) {
+  #about {
+    height: unset;
+  }
+
+  .about-wrapper {
+    height: 100%;
+  }
+
+  .about-content {
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+  }
+
+  .image-container {
+    display: flex;
+  }
+
+  .about-content img {
+    width: 90%;
+    margin: 5% auto;
+    border-radius: 4px;
+  }
+
+  .about-content p {
+    font-size: 1.5rem;
+    max-width: unset;
+    width: 90%;
+    margin: 3% auto 22%;
+  }
+}
+
+/* THIRD BREAKPOINT */
+/* ABOUT PAGE */
+@media (max-width: 900px) {
+
+}
+
+/* FOURTH BREAKPOINT */
+/* ABOUT PAGE */
+@media (max-width: 600px) {
+
+}
+
+
+
+
+.glide__arrows .glide__arrow {
+  background: none;
+  border: none;
+  box-shadow: none;
+  cursor: pointer;
+  padding: 10px;
+  transition: transform 0.2s;
+}
+
+.glide__arrow i {
+  font-size: 2rem;
+  color: white;
+}
+
+
+
+
+
